# rapier-trimesh-problem-reproduction

./: .gitignore  Cargo.toml
assets/shaders/: shader.frag  shader.vert
src/: level.rs  main.rs
